// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsSlider <EsSlider
            :startingValue="100"
            :data="[0,100,500]"
            :marks="[0,500]"
            :min="100"
            :max="500"
            ariaLabel="Select a number" /> 1`] = `
"<div min="100" max="500">
  <div class="es-slider vue-slider vue-slider-ltr" style="padding: 14px 14px; width: auto; height: 4px;">
    <div class="vue-slider-rail">
      <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 50%; transition-property: width,left; transition-duration: 0.5s;"></div>
      <div class="vue-slider-marks">
        <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
          <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
          <div class="slider-label vue-slider-mark-label active">
            100
          </div>
        </div>
        <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
          <div class="vue-slider-mark-step"></div>
          <div class="slider-label vue-slider-mark-label">
            500
          </div>
        </div>
      </div>
      <div aria-valuetext="300" class="vue-slider-dot" role="slider" aria-valuenow="300" aria-valuemin="100" aria-valuemax="500" aria-orientation="horizontal" tabindex="0" aria-label="Select a number" style="width: 28px; height: 28px; transform: translate(-50%, -50%); top: 50%; left: 50%; transition: left 0.5s;">
        <div class="vue-slider-dot-handle"></div>
        <div class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show">
          <div class="slider-tooltip d-flex h5 align-items-center text-white justify-content-center m-0 bg-primary">
            300
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`EsSlider <EsSlider /> tooltipFormatter works 1`] = `
"<div min="0" max="100">
  <div class="es-slider vue-slider vue-slider-ltr" style="padding: 14px 14px; width: auto; height: 4px;">
    <div class="vue-slider-rail">
      <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 100%; transition-property: width,left; transition-duration: 0.5s;"></div>
      <div class="vue-slider-marks"></div>
      <div aria-valuetext="50" class="vue-slider-dot" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-orientation="horizontal" tabindex="0" aria-label="Select a number" style="width: 28px; height: 28px; transform: translate(-50%, -50%); top: 50%; left: 100%; transition: left 0.5s;">
        <div class="vue-slider-dot-handle"></div>
        <div class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show">
          <div class="slider-tooltip d-flex h5 align-items-center text-white justify-content-center m-0 bg-primary">
            $50
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`EsSlider <EsSlider :startingValue="50" /> 1`] = `
"<div min="0" max="100">
  <div class="es-slider vue-slider vue-slider-ltr" style="padding: 14px 14px; width: auto; height: 4px;">
    <div class="vue-slider-rail">
      <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 100%; transition-property: width,left; transition-duration: 0.5s;"></div>
      <div class="vue-slider-marks"></div>
      <div aria-valuetext="50" class="vue-slider-dot" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-orientation="horizontal" tabindex="0" aria-label="Select a number" style="width: 28px; height: 28px; transform: translate(-50%, -50%); top: 50%; left: 100%; transition: left 0.5s;">
        <div class="vue-slider-dot-handle"></div>
        <div class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show">
          <div class="slider-tooltip d-flex h5 align-items-center text-white justify-content-center m-0 bg-primary">
            50
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`EsSlider <EsSlider variant="secondary" /> 1`] = `
"<div min="0" max="100" variant="secondary">
  <div class="es-slider vue-slider vue-slider-ltr" style="padding: 14px 14px; width: auto; height: 4px;" variant="secondary">
    <div class="vue-slider-rail">
      <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 100%; transition-property: width,left; transition-duration: 0.5s;"></div>
      <div class="vue-slider-marks"></div>
      <div aria-valuetext="50" class="vue-slider-dot" role="slider" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" aria-orientation="horizontal" tabindex="0" aria-label="Select a number" style="width: 28px; height: 28px; transform: translate(-50%, -50%); top: 50%; left: 100%; transition: left 0.5s;">
        <div class="vue-slider-dot-handle"></div>
        <div class="vue-slider-dot-tooltip vue-slider-dot-tooltip-top vue-slider-dot-tooltip-show">
          <div class="slider-tooltip d-flex h5 align-items-center text-white justify-content-center m-0 bg-primary">
            50
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
